--- a/spec/system/actions/startAutoMode.spec.yaml
+++ b/spec/system/actions/startAutoMode.spec.yaml
@@ -11,13 +11,20 @@ in:
       global:
         autoMode: false
         pendingEffects: []
+        nextLineConfig:
+          auto:
+            delay: 1000
 out:
   global:
     autoMode: true
     pendingEffects:
       - name: clearAutoNextTimer
       - name: startAutoNextTimer
+        delay: 1000
       - name: render
+    nextLineConfig:
+      auto:
+        delay: 1000
 ---
 case: start auto mode when already enabled
 in:
@@ -25,13 +32,20 @@ in:
       global:
         autoMode: true
         pendingEffects: []
+        nextLineConfig:
+          auto:
+            delay: 1000
 out:
   global:
     autoMode: true
     pendingEffects:
       - name: clearAutoNextTimer
       - name: startAutoNextTimer
+        delay: 1000
       - name: render
+    nextLineConfig:
+      auto:
+        delay: 1000
 ---
 case: start auto mode with skip mode enabled
 in:
@@ -40,6 +54,9 @@ in:
         autoMode: false
         skipMode: true
         pendingEffects: []
+        nextLineConfig:
+          auto:
+            delay: 1000
 out:
   global:
     autoMode: true
@@ -48,7 +65,11 @@ out:
       - name: clearSkipNextTimer
       - name: clearAutoNextTimer
       - name: startAutoNextTimer
+        delay: 1000
       - name: render
+    nextLineConfig:
+      auto:
+        delay: 1000
 ---
 case: start auto mode with existing pending effects
 in:
@@ -58,6 +79,9 @@ in:
         pendingEffects:
           - name: existingEffect
             data: test
+        nextLineConfig:
+          auto:
+            delay: 1000
 out:
   global:
     autoMode: true
@@ -66,7 +90,11 @@ out:
         data: test
       - name: clearAutoNextTimer
       - name: startAutoNextTimer
+        delay: 1000
       - name: render
+    nextLineConfig:
+      auto:
+        delay: 1000
 ---
 case: start auto mode with both auto and skip mode enabled
 in:
@@ -76,6 +104,9 @@ in:
         skipMode: true
         pendingEffects:
           - name: existingEffect
+        nextLineConfig:
+          auto:
+            delay: 1000
 out:
   global:
     autoMode: true
@@ -85,4 +116,8 @@ out:
       - name: clearSkipNextTimer
       - name: clearAutoNextTimer
       - name: startAutoNextTimer
+        delay: 1000
       - name: render
+    nextLineConfig:
+      auto:
+        delay: 1000
