--- a/vt/specs/dialogue/autoplay.yaml
+++ b/vt/specs/dialogue/autoplay.yaml
@@ -8,7 +8,7 @@ l10n:
       lang: en
       keys:
         line1: "Line 1: Testing autoplay functionality"
-        line2: "Line 2: This should auto-advance after 1 second"
+        line2: "Line 2: This should auto-advance after 2 second"
         line3: "Line 3: Click Auto button to enable/disable"
         line4: "Line 4: Auto mode should continue through all lines"
         line5: "Line 5: Final line - auto mode stops here"
@@ -100,6 +100,43 @@ resources:
             actionPayload:
               actions:
                 toggleSkipMode: {}
+
+        - id: speed-slow-button
+          type: text
+          x: 1400
+          y: 50
+          content: "Slow"
+          textStyle:
+            fontSize: 32
+            fill: "white"
+          hover:
+            textStyle:
+              fontSize: 32
+              fill: "yellow"
+          click:
+            actionPayload:
+              actions:
+                setNextLineConfig:
+                  auto:
+                    delay: 2000
+        - id: speed-fast-button
+          type: text
+          x: 1250
+          y: 50
+          content: "Fast"
+          textStyle:
+            fontSize: 32
+            fill: "white"
+          hover:
+            textStyle:
+              fontSize: 32
+              fill: "yellow"
+          click:
+            actionPayload:
+              actions:
+                setNextLineConfig:
+                  auto:
+                    delay: 250
 
 story:
   initialSceneId: test_scene
