--- a/spec/system/actions/nextLine.spec.yaml
+++ b/spec/system/actions/nextLine.spec.yaml
@@ -14,6 +14,8 @@ in:
           manual:
             enabled: true
         pendingEffects: []
+        viewedRegistry:
+          sections: []
       projectData:
         story:
           scenes:
@@ -42,7 +44,12 @@ out:
         enabled: true
     pendingEffects:
       - name: "render"
+      - name: "render"
       - name: "handleLineActions"
+    viewedRegistry:
+      sections:
+        - sectionId: "section1"
+          lastLineId: "1"
   projectData:
     story:
       scenes:
