--- a/src/schemas/systemState/systemState.yaml
+++ b/src/schemas/systemState/systemState.yaml
@@ -84,6 +84,11 @@ properties:
         description: Whether skip mode is active
         default: false
 
+      skipOnlyViewedLines:
+        type: boolean
+        description: Whether skip mode should only skip viewed lines (true) or skip all lines (false)
+        default: true
+
       currentLanguagePackId:
         type: string
         description: ID of the currently active language pack
